--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,26 @@
 spring.application.name=urlShortening
 server.port=8080
-# H2 Database Configuration
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=p
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.h2.console.path=/h2-console
-#Steps to Enable Automatic Updates in the Database
+
+
+# ===============H2 Database Configuration=================
+#spring.h2.console.enabled=true
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=p
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.h2.console.path=/h2-console
+
+#========To Enable Automatic Updates in the Database========
 spring.jpa.hibernate.ddl-auto=update
 
+
+# MySQL Database Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/urlDB
+spring.datasource.username=root
+spring.datasource.password=12345678
+
+# Hibernate Configuration
+spring.jpa.show-sql=true
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
